--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <title>Shoping.com</title>
     <!--Título do site-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
     <!--Importando a folha de estilo-->
+    <link rel="stylesheet" href="css/animations.css"/>
+    <!--Importanto folha de estilo com as animações presentes-->
     <link rel="shortcut icon" href="media/basket.png" type="image/x-icon">
     <!--favicon da página-->
     <script src="js/main.js"></script>
@@ -27,8 +29,6 @@
     <!--Conf ícones-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <!--Conf font awesome (para ícones)-->
-
-   
 
 </head>
 <html>
@@ -68,6 +68,15 @@
             <a href="#">Material escolar</a> <a href="#">Carros elétricos</a>
         </details><a href="#">Destaques do dia</a> <a href="#">Ofertas</a> <a href="#">Fale conosco</a>
     </nav>
+    <section id="mostradorDeImagens">
+        <div class="fotos">
+            <img src="media/camiseta.jpg" alt="Camiseta à venda">
+            <img src="media/calca.png" alt="Calça à venda">
+            <img src="media/casaco.png" alt="Casaco à venda">
+            <img src="media/sapato.jpg" alt="Sapato à venda">
+            <img src="media/camiseta.jpg" alt="Camiseta à venda">
+        </div>
+    </section>
     <section id="produtos">
         <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
@@ -116,6 +125,54 @@
         <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto012"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto013"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto014"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto015"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto016"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto017"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto018"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto019"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto020"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto021"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto022"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto023"></p>
+        </div>
+        <div onclick="produtoInfo()" class="item">
+            <div class="imgProduto"></div>
+            <p id="produto024"></p>
         </div>
     </section>
 </body>
