--- a/login.html
+++ b/login.html
@@ -22,21 +22,29 @@
     <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
     <!--conf biblioteca utilizada para decodificar login com o google-->
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--Conf biblioteca sweet alert-->
+
 </head>
 <html>
 
 <body id="bg">
     <div id="loginBox">
+
         <i class="fab fa-adn"></i>
-        <input class="user" type="email" name="emailUser" placeholder="example@gmail.com">
-        <input class="user" type="password" name="passUser" placeholder="password">
+        
         <div id="googleLogin">
             <div id="buttonDiv"></div>
         </div>
+        <p id="opcoesDeLogin">Ou</p>
+        <input class="userInformationsInput" type="email" name="emailUser" placeholder="username ou e-mail">
+        <input class="userInformationsInput" type="password" name="passUser" placeholder="password">
+        
         <input onclick="submit()" type="submit" value="Enviar"><br>
         <p><a href="#">Esqueceu sua senha?</a></p>
         <p>Não tem uma conta? <a href="#">Criar</a></p>
         <p id="given_name"></p>
+
     </div>
 </body>
 
